--- a/Desktop/canalAnonimo/style.css
+++ b/Desktop/canalAnonimo/style.css
@@ -16,9 +16,10 @@
         body {
             font-family: 'Roboto', sans-serif;
             color: #333;
-            background: linear-gradient(to bottom, #f49f44 0%, #FFBF78 100%);
+            background: linear-gradient(to bottom, #d09557 0%, #FFBF78 100%);
             min-height: 100vh;
             padding: 20px;
+            box-shadow: inset 0 0 10px rgba(0,0,0,0.1);
         }
 
         .container {    
